# kvm_tf

./: .env.example  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .terraform.lock.hcl  .tool-versions  CLAUDE.md  README.md  ansible.cfg  bootstrap  devbox.json  hosts  hosts.example  main.tf  outputs.tf  providers.tf  pyproject.toml  requirements.txt  requirements.yml  taskfile.yml  variables.tf
ansible/: ansible.cfg  playbook.yml
config/: bootstrap  cloud_init.yml  network_config.yml  validate
taskfiles/: terraform.yml
tasks/: libvirtd-config.yml  playbook.yml
test/: examples_basic_test.go  go.mod  go.sum
tests/: go.mod  go.sum
