[tool.poetry]
name = "kvm-tf"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "8.5.0"
ansible-core = "2.15.6"
cffi = "1.16.0"
cryptography = "41.0.5"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
packaging = "23.2"
pycparser = "2.21"
pyyaml = "6.0.1"
resolvelib = "1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
